Code cleaning and version updated to 1.1.2